IE specific alignment issue fixed

--- a/custom.css
+++ b/custom.css
@@ -108,11 +108,7 @@ p, label {
     border-radius: 21px;
     border: thin solid #888;
     white-space: nowrap;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content: center;
-        padding: 0 10px;
+    padding: 0 10px;
 }
 .customBtn:hover {
     cursor: pointer;
